# tgbot-seller

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260529_0001_initial.py  20260529_0002_add_admins.py  20260602_0003_web_pwa_schema.py  20260602_0004_customer_auth.py
app/: __init__.py  cli.py  main.py
app/api/: deps.py  routes.py
app/bot/: dispatcher.py  handlers.py  helpers.py  routes.py  states.py
app/core/: config.py  qr_lifetime.py  security.py
app/db/: session.py
app/jobs/: __init__.py  expiration.py
app/models/: __init__.py  admin.py  audit.py  enums.py  promo.py  seller.py  settings.py  transaction.py  user.py
app/pwa/: __init__.py  routes.py
app/schemas/: api.py
app/services/: customer_codes.py  loyalty.py
app/static/: scanner.js  styles.css
app/templates/: admin.html  base.html  login.html  scan.html  transactions.html
app/web/: routes.py
deploy/: Caddyfile.example  nginx.conf.example
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.tsx  main.tsx  serviceWorker.ts  vite-env.d.ts
frontend/src/api/: client.ts
nginx/: nginx.conf
scripts/: deploy_prod.sh  dev_access.sh  docker_entrypoint.py  generate_ssl_cert.py  generate_ssl_cert.sh
tests/: conftest.py  test_app.py  test_customer_codes.py  test_loyalty.py  test_qr_extract.py  test_qr_lifetime.py  test_security.py  test_web_security.py
(+13 files in other folders)
