[project]
name = "tgbot-seller"
version = "0.1.0"
description = "Telegram loyalty bonus MVP with FastAPI and PostgreSQL"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.6",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "fastapi>=0.111",
    "itsdangerous>=2.2",
    "jinja2>=3.1",
    "passlib[bcrypt]>=1.7",
    "pydantic-settings>=2.2",
    "python-multipart>=0.0.9",
    "qrcode[pil]>=7.4",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
